--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,8 @@ add_executable(bicliques
         src/algorithms/AllMaximalIndependentSets.h
         src/algorithms/LexMIB.cpp
         src/algorithms/LexMIB.h
+	src/algorithms/iOCTMIB.h
+	src/algorithms/iOCTMIB.cpp
         src/algorithms/NonLexMIB.cpp
         src/algorithms/NonLexMIB.h
         src/algorithms/SimpleCCs.cpp
